--- a/static/index.html
+++ b/static/index.html
@@ -48,13 +48,43 @@
     </section>
     <section id="problem" class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h2>The Challenge</h2>
+            <h2>Our Challenge</h2>
             <p>
                 Chirp at birds sweet beast, but sleep in the bathroom sink refuse to drink water except out of someone's glass. Scratch leg; meow for can opener to feed me chew foot play riveting piece on synthesizer keyboard yet stare at wall turn and meow stare at wall some more meow again continue staring but climb leg hate dog, but jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed. Spread kitty litter all over house tuxedo cats always looking dapper but need to chase tail, and toy mouse squeak roll over and poop on grasses, but purr for no reason. Pooping rainbow while flying in a toasted bread costume in space make meme, make cute face for climb a tree, wait for a fireman jump to fireman then scratch his face, but scratch leg; meow for can opener to feed me. Stare out the window leave dead animals as gifts swat at dog put toy mouse in food bowl run out of litter box at full speed mew.
             </p>
             <p>
                 Hunt anything that moves attack feet, or scratch leg; meow for can opener to feed me, or ears back wide eyed but meow all night having their mate disturbing sleeping humans. Hiss at vacuum cleaner run in circles leave fur on owners clothes scratch leg; meow for can opener to feed me, yet leave hair everywhere, or caticus cuteicus. Instantly break out into full speed gallop across the house for no reason eat prawns daintily with a claw then lick paws clean wash down prawns with a lap of carnation milk then retire to the warmest spot on the couch to claw at the fabric before taking a catnap stick butt in face, but meowwww. Burrow under covers. Meowzer! gnaw the corn cob stick butt in face, and rub face on owner and then cats take over the world have secret plans but meowwww. Scratch at the door then walk away use lap as chair, so throwup on your pillow, but cat slap dog in face poop in the plant pot attack dog, run away and pretend to be victim. Claws in your leg lick butt and make a weird face scamper and vommit food and eat it again for purr for no reason.
             </p>
+        </div>
+    </section>
+    <section id="user-research" class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h2>Getting Information</h2>
+        </div>
+    </section>
+    <section id="personas-scenarios" class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h2>Our Personas and Scenarios</h2>
+        </div>
+    </section>
+    <section id="whiteboarding" class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h2>Ideation and Whiteboarding</h2>
+        </div>
+    </section>
+    <section id="low-fi" class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h2>Low Fidelity Iterations</h2>
+        </div>
+    </section>
+    <section id="hi-fi" class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h2>Building the Prototype</h2>
+        </div>
+    </section>
+    <section id="validating" class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h2>Validating our Design</h2>
         </div>
     </section>
 </main>
