--- a/static/index.html
+++ b/static/index.html
@@ -41,9 +41,7 @@
 <main class="container">
     <section id="blurb" class="row">
         <div class="col-md-6 col-md-offset-3">
-            <blockquote>
-                Lorem
-            </blockquote>
+            <iframe height="315" src="https://www.youtube.com/embed/VtbI9fOM61M" class="featurette-video" allowfullscreen></iframe>
         </div>
     </section>
     <section id="problem" class="row">
