--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,7 +49,16 @@
         <div class="col-md-8 col-md-offset-2">
             <h2>Our Challenge</h2>
             <p>
-                Chirp at birds sweet beast, but sleep in the bathroom sink refuse to drink water except out of someone's glass. Scratch leg; meow for can opener to feed me chew foot play riveting piece on synthesizer keyboard yet stare at wall turn and meow stare at wall some more meow again continue staring but climb leg hate dog, but jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed. Spread kitty litter all over house tuxedo cats always looking dapper but need to chase tail, and toy mouse squeak roll over and poop on grasses, but purr for no reason. Pooping rainbow while flying in a toasted bread costume in space make meme, make cute face for climb a tree, wait for a fireman jump to fireman then scratch his face, but scratch leg; meow for can opener to feed me. Stare out the window leave dead animals as gifts swat at dog put toy mouse in food bowl run out of litter box at full speed mew.
+                Chirp at birds sweet beast, but sleep in the bathroom sink refuse to drink water except out of someone's
+                glass. Scratch leg; meow for can opener to feed me chew foot play riveting piece on synthesizer keyboard
+                yet stare at wall turn and meow stare at wall some more meow again continue staring but climb leg hate
+                dog, but jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until
+                treats are fed. Spread kitty litter all over house tuxedo cats always looking dapper but need to chase
+                tail, and toy mouse squeak roll over and poop on grasses, but purr for no reason. Pooping rainbow while
+                flying in a toasted bread costume in space make meme, make cute face for climb a tree, wait for a
+                fireman jump to fireman then scratch his face, but scratch leg; meow for can opener to feed me. Stare
+                out the window leave dead animals as gifts swat at dog put toy mouse in food bowl run out of litter box
+                at full speed mew.
             </p>
         </div>
     </section>
@@ -58,13 +66,34 @@
         <div class="col-md-8 col-md-offset-2">
             <h2>User Research</h2>
             <p>
-                To help guide our design process our team observed users in a controlled environment to collect qualitative data on how UVic students interact with the current UVic web services, in particular, MyPage and Student Services. After some brief background questions we asked the students to perform a number of common tasks using the UVic web services.
+                To help guide our design process our team observed users in a controlled environment to collect
+                qualitative data on how UVic students interact with the current UVic web services, in particular, MyPage
+                and Student Services. After some brief background questions we asked the students to perform a number of
+                common tasks using the UVic web services.
             </p>
         </div>
     </section>
     <section id="personas-scenarios" class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h2>Our Personas and Scenarios</h2>
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Our Personas and Scenarios</h2>
+                    <p>We developed two personas to help guide our design. The two personas we chose were a junior
+                        student, Daniel, who had just started at UVic and a senior student, Amy, who was in her third
+                        year.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <img class="img-circle img-center" src="assets/img/amy.jpeg" alt="Amy" width="140" height="140">
+                    <h3>
+                        Amy Bailey
+                        <br/>
+                        <small>Senior Student</small>
+                    </h3>
+                    <p>Amy is an artistic 23 year old girl from Fredricton, New Brunswick. After graduating from high school she spent a year travelling. She fell in love with the many stories of people she met. Inspired by this, Amy set out to capture her perspective and tell stories through film. </p>
+                </div>
+            </div>
         </div>
     </section>
     <section id="whiteboarding" class="row">
