--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,8 @@
 <main class="container">
     <section id="blurb" class="row">
         <div class="col-md-6 col-md-offset-3">
-            <iframe height="315" src="https://www.youtube.com/embed/VtbI9fOM61M" class="featurette-video" allowfullscreen></iframe>
+            <iframe height="315" src="https://www.youtube.com/embed/VtbI9fOM61M" class="featurette-video"
+                    allowfullscreen></iframe>
         </div>
     </section>
     <section id="problem" class="row">
@@ -73,25 +74,32 @@
     </section>
     <section id="personas-scenarios" class="row">
         <div class="col-md-8 col-md-offset-2">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>Our Personas and Scenarios</h2>
-                    <p>We developed two personas to help guide our design. The two personas we chose were a junior
-                        student, Daniel, who had just started at UVic and a senior student, Amy, who was in her third
-                        year.</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <img class="img-circle img-center" src="assets/img/amy.jpeg" alt="Amy" width="140" height="140">
-                    <h3>
-                        Amy Bailey
-                        <br/>
-                        <small>Senior Student</small>
-                    </h3>
-                    <p>Amy is an artistic 23 year old girl from Fredricton, New Brunswick. After graduating from high school she spent a year travelling. She fell in love with the many stories of people she met. Inspired by this, Amy set out to capture her perspective and tell stories through film. </p>
-                </div>
-            </div>
+            <h2>Our Personas and Scenarios</h2>
+            <p>We developed two personas to help guide our design. The two personas we chose were a junior
+                student, Daniel, who had just started at UVic and a senior student, Amy, who was in her third
+                year.</p>
+        </div>
+        <div class="col-md-5 col-md-offset-1">
+            <img class="img-circle img-responsive" src="assets/img/daniel.jpg" alt="Daniel" width="200">
+            <h3>
+                Daniel Lévesque
+                <br/>
+                <small>Junior Student</small>
+            </h3>
+            <p>Daniel is a smart, caring, but cautious man from Houston, Texas. He caries forth his southern hospitality
+                to everyone he meets, making him an easy man to get along with. In high school he was involved with the
+                students' council, took info tech courses, and spent most of his time doing woodwork.</p>
+        </div>
+        <div class="col-md-5">
+            <img class="img-circle img-responsive" src="assets/img/amy.jpeg" alt="Amy" width="200">
+            <h3>
+                Amy Bailey
+                <br/>
+                <small>Senior Student</small>
+            </h3>
+            <p>Amy is an artistic 23 year old girl from Fredricton, New Brunswick. After graduating from high school she
+                spent a year travelling. She fell in love with the many stories of people she met. Inspired by this, Amy
+                set out to capture her perspective and tell stories through film. </p>
         </div>
     </section>
     <section id="whiteboarding" class="row">
