Add images and rough descriptions

--- a/static/index.html
+++ b/static/index.html
@@ -105,16 +105,38 @@
     <section id="whiteboarding" class="row">
         <div class="col-md-8 col-md-offset-2">
             <h2>Ideation and Whiteboarding</h2>
+            <p>To brainstorm, our team projected the existing UVic mypage onto the whiteboard to throw around ideas of
+                how to organize the existing content</p>
+            <img src="assets/img/improvements.jpg" class="img-responsive">
+            <p>Singling out each feature, we decided how to categorize and lay them out</p>
+            <img src="assets/img/planning.jpg" class="img-responsive">
+            <p>Once the features were listed, we layed them out in categories to work into our low fidelity prototype</p>
+            <img src="assets/img/categorization.jpg" class="img-responsive">
         </div>
     </section>
     <section id="low-fi" class="row">
         <div class="col-md-8 col-md-offset-2">
             <h2>Low Fidelity Iterations</h2>
+            <p>Using our plan previously developed, we layed out the elements in their respective pages</p>
+            <img src="assets/img/Finances-Balances.png" class="img-responsive">
+            <p>As we implemented features in Balsamiq and the pages came together, naturally we moved elements around to
+                places we deemed appropriate</p>
+            <img src="assets/img/Home-Expanded-Event.png" class="img-responsive">
+            <p>When we ran into usability issues or found a better solution, we revisited the drawing board to
+                brainstorm new solutions</p>
+            <img src="assets/img/Home-Building-Page.png" class="img-responsive">
+            <p>Upon discovering a better way, we implemented it and re-tested, thereby iterating towards the 'best'
+                solution</p>
         </div>
     </section>
     <section id="hi-fi" class="row">
         <div class="col-md-8 col-md-offset-2">
             <h2>Building the Prototype</h2>
+            <p>We decided that to provide the most realistic prototype while still allowing flexibility, it would be best
+                build a static website.</p>
+            <p>To do this, we used Handlebars and Grunt to generate static HTML pages from templates we built and JSON
+                to populate data fields</p>
+            <blockquote>Put webpage in here</blockquote>
         </div>
     </section>
     <section id="validating" class="row">
