--- a/static/index.html
+++ b/static/index.html
@@ -105,28 +105,32 @@
     <section id="whiteboarding" class="row">
         <div class="col-md-8 col-md-offset-2">
             <h2>Ideation and Whiteboarding</h2>
-            <p>To brainstorm, our team projected the existing UVic mypage onto the whiteboard to throw around ideas of
-                how to organize the existing content</p>
+            <p>To brainstorm, our team projected the existing UVic mypage onto a whiteboard to throw around ideas of
+                how to reorganize the existing content.</p>
             <img src="assets/img/improvements.jpg" class="img-responsive">
-            <p>Singling out each feature, we decided how to categorize and lay them out</p>
+            <p>As ideas were thrown around, everyone helped by drawing out various interface they could imagine.
+                Together, we decided on how to style the interface which helped us build our low fidelity mockups.</p>
             <img src="assets/img/planning.jpg" class="img-responsive">
-            <p>Once the features were listed, we layed them out in categories to work into our low fidelity prototype</p>
+            <p>Singling out each feature, we decided how to categorize and lay them out.</p>
             <img src="assets/img/categorization.jpg" class="img-responsive">
         </div>
     </section>
     <section id="low-fi" class="row">
         <div class="col-md-8 col-md-offset-2">
             <h2>Low Fidelity Iterations</h2>
-            <p>Using our plan previously developed, we layed out the elements in their respective pages</p>
+            <p>Thanks to previous brainstorming, creating low fidelity prototypes was relatively streamlined as the only
+                work to do was lay out the design in Balsamiq.</p>
             <img src="assets/img/Finances-Balances.png" class="img-responsive">
-            <p>As we implemented features in Balsamiq and the pages came together, naturally we moved elements around to
-                places we deemed appropriate</p>
+            <p>As we implemented elements in Balsamiq and the pages came together, naturally we tweaked elements and
+                their location.
             <img src="assets/img/Home-Expanded-Event.png" class="img-responsive">
             <p>When we ran into usability issues or found a better solution, we revisited the drawing board to
-                brainstorm new solutions</p>
+                brainstorm. Here we found that users didn't like how tapping the building brought them to a different
+                app.</p>
             <img src="assets/img/Home-Building-Page.png" class="img-responsive">
-            <p>Upon discovering a better way, we implemented it and re-tested, thereby iterating towards the 'best'
-                solution</p>
+            <p>We decided that it would be more appropriate to have a pop-over appear with relevant information, keeping
+                 the user on the same page and providing more information at a glace. So, upon discovering a better way,
+                 we implemented it and re-tested, thereby iterating towards the 'best' solution.</p>
         </div>
     </section>
     <section id="hi-fi" class="row">
@@ -135,13 +139,18 @@
             <p>We decided that to provide the most realistic prototype while still allowing flexibility, it would be best
                 build a static website.</p>
             <p>To do this, we used Handlebars and Grunt to generate static HTML pages from templates we built and JSON
-                to populate data fields</p>
+                to populate data fields.</p>
             <blockquote>Put webpage in here</blockquote>
         </div>
     </section>
     <section id="validating" class="row">
         <div class="col-md-8 col-md-offset-2">
             <h2>Validating our Design</h2>
+            <p>To validate our design, we did another cycle of user testing with both previous and new participants. By
+                following the same set of questions, we could see how both new participants found the interface, and
+                previous participants did compared to their first round. Doing so, we gathered qualitative data which
+                subjectively verified our hypothesis, that our interface better provided online UVic services that we
+                found ourselves and others needing.</p>
         </div>
     </section>
 </main>
