--- a/static/index.html
+++ b/static/index.html
@@ -48,16 +48,14 @@
         <div class="col-md-8 col-md-offset-2">
             <h2>Our Challenge</h2>
             <p>
-                Chirp at birds sweet beast, but sleep in the bathroom sink refuse to drink water except out of someone's
-                glass. Scratch leg; meow for can opener to feed me chew foot play riveting piece on synthesizer keyboard
-                yet stare at wall turn and meow stare at wall some more meow again continue staring but climb leg hate
-                dog, but jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until
-                treats are fed. Spread kitty litter all over house tuxedo cats always looking dapper but need to chase
-                tail, and toy mouse squeak roll over and poop on grasses, but purr for no reason. Pooping rainbow while
-                flying in a toasted bread costume in space make meme, make cute face for climb a tree, wait for a
-                fireman jump to fireman then scratch his face, but scratch leg; meow for can opener to feed me. Stare
-                out the window leave dead animals as gifts swat at dog put toy mouse in food bowl run out of litter box
-                at full speed mew.
+                The UVic MyPage is the home page given to all students attending UVic. MyPage is a site where one can
+                access personal information pertaining to UVic such as timetables, tuition, and tax forms.
+            </p>
+            <p>
+                Unfortunately, the UVic MyPage is also a cluttered mess. There is too much extraneous information, and
+                there is no organizational flow. It can often be frustrating locating small pieces of information on the
+                site. With that in mind, we saw the potential to make a simplified and structured UVic student home
+                page. We wanted the home page to be a place where one could find information easily and efficiently.
             </p>
         </div>
     </section>
@@ -72,35 +70,46 @@
             </p>
         </div>
     </section>
-    <section id="personas-scenarios" class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <h2>Our Personas and Scenarios</h2>
-            <p>We developed two personas to help guide our design. The two personas we chose were a junior
-                student, Daniel, who had just started at UVic and a senior student, Amy, who was in her third
-                year.</p>
+    <section id="personas-scenarios">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h2>Our Personas and Scenarios</h2>
+                <p>
+                    We developed two personas to help guide our design. The two personas we chose were a junior
+                    student, Daniel, who had just started at UVic and a senior student, Amy, who was in her third
+                    year.
+                </p>
+            </div>
         </div>
-        <div class="col-md-5 col-md-offset-1">
-            <img class="img-circle img-responsive" src="assets/img/daniel.jpg" alt="Daniel" width="200">
-            <h3>
-                Daniel Lévesque
-                <br/>
-                <small>Junior Student</small>
-            </h3>
-            <p>Daniel is a smart, caring, but cautious man from Houston, Texas. He caries forth his southern hospitality
-                to everyone he meets, making him an easy man to get along with. In high school he was involved with the
-                students' council, took info tech courses, and spent most of his time doing woodwork.</p>
+        <div class="row figure">
+            <div class="col-md-5 col-md-offset-1">
+                <img class="img-circle img-responsive img-center" src="assets/img/daniel.jpg" alt="Daniel" width="200">
+                <h3 class="text-center">
+                    Daniel Lévesque
+                    <br/>
+                    <small>Junior Student</small>
+                </h3>
+                <p>Daniel is a smart, caring, but cautious man from Houston, Texas. He caries forth his southern
+                    hospitality
+                    to everyone he meets, making him an easy man to get along with. In high school he was involved with
+                    the
+                    students' council, took info tech courses, and spent most of his time doing woodwork.</p>
+            </div>
+            <div class="col-md-5">
+                <img class="img-circle img-responsive img-center" src="assets/img/amy.jpeg" alt="Amy" width="200">
+                <h3 class="text-center">
+                    Amy Bailey
+                    <br/>
+                    <small>Senior Student</small>
+                </h3>
+                <p>Amy is an artistic 23 year old girl from Fredricton, New Brunswick. After graduating from high school
+                    she
+                    spent a year travelling. She fell in love with the many stories of people she met. Inspired by this,
+                    Amy
+                    set out to capture her perspective and tell stories through film. </p>
+            </div>
         </div>
-        <div class="col-md-5">
-            <img class="img-circle img-responsive" src="assets/img/amy.jpeg" alt="Amy" width="200">
-            <h3>
-                Amy Bailey
-                <br/>
-                <small>Senior Student</small>
-            </h3>
-            <p>Amy is an artistic 23 year old girl from Fredricton, New Brunswick. After graduating from high school she
-                spent a year travelling. She fell in love with the many stories of people she met. Inspired by this, Amy
-                set out to capture her perspective and tell stories through film. </p>
-        </div>
+
     </section>
     <section id="whiteboarding" class="row">
         <div class="col-md-8 col-md-offset-2">
@@ -123,20 +132,21 @@
             <img src="assets/img/Finances-Balances.png" class="img-responsive">
             <p>As we implemented elements in Balsamiq and the pages came together, naturally we tweaked elements and
                 their location.
-            <img src="assets/img/Home-Expanded-Event.png" class="img-responsive">
+                <img src="assets/img/Home-Expanded-Event.png" class="img-responsive">
             <p>When we ran into usability issues or found a better solution, we revisited the drawing board to
                 brainstorm. Here we found that users didn't like how tapping the building brought them to a different
                 app.</p>
             <img src="assets/img/Home-Building-Page.png" class="img-responsive">
             <p>We decided that it would be more appropriate to have a pop-over appear with relevant information, keeping
-                 the user on the same page and providing more information at a glace. So, upon discovering a better way,
-                 we implemented it and re-tested, thereby iterating towards the 'best' solution.</p>
+                the user on the same page and providing more information at a glace. So, upon discovering a better way,
+                we implemented it and re-tested, thereby iterating towards the 'best' solution.</p>
         </div>
     </section>
     <section id="hi-fi" class="row">
         <div class="col-md-8 col-md-offset-2">
             <h2>Building the Prototype</h2>
-            <p>We decided that to provide the most realistic prototype while still allowing flexibility, it would be best
+            <p>We decided that to provide the most realistic prototype while still allowing flexibility, it would be
+                best
                 build a static website.</p>
             <p>To do this, we used Handlebars and Grunt to generate static HTML pages from templates we built and JSON
                 to populate data fields.</p>
