--- a/static/index.html
+++ b/static/index.html
@@ -102,11 +102,26 @@
                     <br/>
                     <small>Senior Student</small>
                 </h3>
-                <p>Amy is an artistic 23 year old girl from Fredricton, New Brunswick. After graduating from high school
-                    she
-                    spent a year travelling. She fell in love with the many stories of people she met. Inspired by this,
-                    Amy
-                    set out to capture her perspective and tell stories through film. </p>
+                <p>
+                    Amy is an artistic 23 year old girl from Fredricton, New Brunswick. After graduating from high school she spent a year travelling. She fell in love with the many stories of people she met. Inspired by this, Amy set out to capture her perspective and tell stories through film.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <p>
+                    From these personas we developed two user stories (scenarios) to be representative of common tasks that a UVic student might need to perform. We describe them below in the context of the current UVic web services to help highlight current issues.
+                </p>
+                <h3>Daniel finds his first class</h3>
+                <img class="img-rounded img-responsive pull-left" alt="Daniel looking for his first class" src="assets/img/first-class.jpg"/>
+                <p>
+                    It's Tuesday, Daniel has just started his first semester of classes at UVic. He needs to get to his first class, MATH 100. He finds the course on his timetable but doesn't know what DTB is. He finds out it's the David Turpin Building from the website but then someone says to "just go to SSM" and he gets confused. Not sure where his class is Daniel ends up in the David Strong Building and sits through a full hour and twenty minutes of ECON 103c.
+                </p>
+                <h3>Amy applies for Scholarships</h3>
+                <img class="img-rounded img-responsive pull-right" alt="Amy applying for Scholarships" src="assets/img/scholarship.jpg"/>
+                <p>
+                    Amy, like many other university students is starting to run out of money by her 3rd year of university. She decides to apply for a few scholarships. After spending a few hours on one of the applications, the form says to attach a copy of her "Official Transcript" and "Summary of Tuition Fees". Amy spends the rest of her night attempting to find these documents on the UVIC myPage website. Unfortunately, due to the confusing layout of the website she is unsuccessful, and unable to submit the application.
+                </p>
             </div>
         </div>
 
@@ -116,12 +131,12 @@
             <h2>Ideation and Whiteboarding</h2>
             <p>To brainstorm, our team projected the existing UVic mypage onto a whiteboard to throw around ideas of
                 how to reorganize the existing content.</p>
-            <img src="assets/img/improvements.jpg" class="img-responsive">
+            <img src="assets/img/improvements.jpg" class="img-rounded img-responsive">
             <p>As ideas were thrown around, everyone helped by drawing out various interface they could imagine.
                 Together, we decided on how to style the interface which helped us build our low fidelity mockups.</p>
-            <img src="assets/img/planning.jpg" class="img-responsive">
+            <img src="assets/img/planning.jpg" class="img-rounded img-responsive">
             <p>Singling out each feature, we decided how to categorize and lay them out.</p>
-            <img src="assets/img/categorization.jpg" class="img-responsive">
+            <img src="assets/img/categorization.jpg" class="img-rounded img-responsive">
         </div>
     </section>
     <section id="low-fi" class="row">
