Add user research

--- a/static/index.html
+++ b/static/index.html
@@ -73,6 +73,37 @@
                 and Student Services. After some brief background questions we asked the students to perform a number of
                 common tasks using the UVic web services.
             </p>
+            <p>
+                Our user research yielded some interesting trends,
+            </p>
+            <dl class="dl-horizontal">
+                <dt>Calling In</dt>
+                <dd>
+                    <p>If unable to find the information they needed in their web services, many users fell back to calling the department in question.</p>
+                </dd>
+                <dt>Timetable</dt>
+                <dd><p>Most users can find their timetable but wish it was easier to interact with.</p>
+                </dd>
+                <dt>Proof of Enrollment</dt>
+                <dd>
+                    <p>Many users think that their administrative transcript it the closest thing to a proof of enrolment available from the web services.</p>
+                </dd>
+                <dt>OneCard</dt>
+                <dd>
+                    <p>Almost all users resort to the search functionality to find their OneCard information.</p>
+                </dd>
+            </dl>
+        </div>
+    </section>
+    <section id="user-research" class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h2>User Research</h2>
+            <p>
+                To help guide our design process our team observed users in a controlled environment to collect
+                qualitative data on how UVic students interact with the current UVic web services, in particular, MyPage
+                and Student Services. After some brief background questions we asked the students to perform a number of
+                common tasks using the UVic web services.
+            </p>
         </div>
     </section>
     <section id="personas-scenarios">
