Add our solution

--- a/static/index.html
+++ b/static/index.html
@@ -95,14 +95,11 @@
             </dl>
         </div>
     </section>
-    <section id="user-research" class="row">
+    <section id="our-solution" class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h2>User Research</h2>
+            <h2>Our Solution</h2>
             <p>
-                To help guide our design process our team observed users in a controlled environment to collect
-                qualitative data on how UVic students interact with the current UVic web services, in particular, MyPage
-                and Student Services. After some brief background questions we asked the students to perform a number of
-                common tasks using the UVic web services.
+                We hoped to improve the navigability and the usability of the UVic web services through <b>consistent branding</b>, <b>user centered design</b> and thoughtful <b>information hierarchies</b>.
             </p>
         </div>
     </section>
