Add custom bootstrap

--- a/static/index.html
+++ b/static/index.html
@@ -9,10 +9,10 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>MyUVic</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -155,6 +155,17 @@
                 <p>
                     Amy, like many other university students is starting to run out of money by her 3rd year of university. She decides to apply for a few scholarships. After spending a few hours on one of the applications, the form says to attach a copy of her "Official Transcript" and "Summary of Tuition Fees". Amy spends the rest of her night attempting to find these documents on the UVIC myPage website. Unfortunately, due to the confusing layout of the website she is unsuccessful, and unable to submit the application.
                 </p>
+                <p>
+                    From these scenarios we derived two <b>core use cases</b>,
+                </p>
+                <dl >
+                    <dt>Retrieving Information</dt>
+                    <dd><p>Frequently UVic students require information about their, finances, grades or schedule from their web services. This use case is exemplified by both user stories.</p>
+                    </dd>
+                    <dt>Submitting Information</dt>
+                    <dd><p>UVic students also need submit information either to notify to University of something or to update personal information. This use case is shown in Amy’s user story.</p>
+                    </dd>
+                </dl>
             </div>
         </div>
 
@@ -217,7 +228,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script>window.jQuery || document.write('<script src="assets/js/jquery.min.js"><\/script>')</script>
+<script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
