--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
     <h2>A redesign of the<br class="visible-xs"/> UVic Web Services</h2>
 
 
-    <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#video-modal" style="margin-top:30px;">
+    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#video-modal" style="margin-top:30px;">
         <span class="glyphicon glyphicon-play-circle" style="top:2px;"></span> Watch the Video
     </button>
 
